--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
   <nav>
   <a href="">Home</a>
-  <a href="about">About</a>
+  <a href="about.html">About</a>
   <a href="mailto:hwengerstickel@pm.me">Contact</a>
   </nav>
     <h1>TwilightBlood</h1>
