--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="simple.min.css">
+<title>My Story = TwilightBlood</title>
 <div class="quote">
   <blockquote>
     <p>Talk is cheap.<br>Show me the code.</p>
