--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
   <main>
     <p>I do stuff with my life, unlike most people! Here are some stuff I do:</p>
+    <center><a href='https://github.com/Henryws/pacstall/'><button>Pacstall - AUR for Ubuntu</button></a></center>
+    <center><a href='https://github.com/Henryws/mine/'><button>mine - dead simple Minecraft wrapper</button></a></center>
   </main>
 
   <footer>
-    <p>Jane Smith's website.</p>
+    <p>TwilightBlood's website.</p>
   </footer>
 </body>
 </html>
